# Transcript

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  Cargo.toml  Directory.Build.props  README.md  agents.md  build.rs  package-lock.json  package.json  tauri.conf.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.github/workflows/: release-desktop.yml  release.yml
capabilities/: default.json
frontend/: app.js  index.html  package-lock.json  package.json  styles.css  tsconfig.json
frontend/scripts/: prepare-dist.mjs
frontend/src/: app.ts  backend.ts  dom.ts  render.ts  tauri.d.ts  types.d.ts
installer/windows/: transcript.iss
src/: Transcript.slnx  domain.rs  main.rs
src/Transcript.Application/: Transcript.Application.csproj
src/Transcript.Infrastructure/: Transcript.Infrastructure.csproj
src/Transcript.Presentation/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  (+1 more)
tests/: AppSlice.test.ts  AppUpdater.test.ts  AudioWorklet.test.ts  BingTranslateService.test.ts  DeepgramAccountService.test.ts  DeepgramConnection.test.ts  DeepgramEndpoint.test.ts  DeepgramMessageParser.test.ts  ExportService.test.ts  Formatters.test.ts  GitHubReleaseClient.test.ts  GoogleTranslateService.test.ts  IpcChannel.test.ts  LegacyDataMigrationService.test.ts  Localization.test.ts  LoggerService.test.ts  ReleaseConfiguration.test.ts  RendererNavigationPolicy.test.ts  SettingsPersistenceQueue.test.ts  SettingsSchema.test.ts  StorageService.test.ts  TranscriptSentenceMatcher.test.ts  TranscriptService.test.ts
(+153 files in other folders)
