[package]
name = "transcript"
version = "1.0.4"
edition = "2024"
description = "Minimal Rust desktop transcript tool using Deepgram"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.16"
crossbeam-channel = "0.5"
dirs = "6.0"
futures-util = "0.3"
http = "1.3"
log = { version = "0.4", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = "2"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
urlencoding = "2.1"

[build-dependencies]
tauri-build = "2"

[patch.crates-io]
typeid = { path = "vendor/typeid" }

[profile.release]
strip = true
lto = "thin"
